# flask-anime-api

./: .env.example  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 73c3d6dfbd05_user_fields_for_delete.py  9d1d7a21b0af_anime_type_column.py  df30aa3dee3a_user_table.py
flask-anime-api/: hello.py
flask_anime_api/: __init__.py  anime.py  anime_repository.py  anime_routes.py  config.py  data.py  schemas.py
flask_anime_api/anime/: repository.py  routes.py  service.py
flask_anime_api/auth/: middleware.py  routes.py  service.py
flask_anime_api/model/: anime.py  anime_studio.py  database.py  schemas.py  studio.py  user.py
flask_anime_api/studio/: repository.py  routes.py  service.py
flask_anime_api/user/: repository.py  routes.py  service.py
