[tool.poetry]
name = "flask-anime-api"
version = "0.1.0"
description = ""
authors = ["Ilya <northenlight6899@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.2"
pydantic = "^2.12.5"
python-dotenv = "^1.2.1"
sqlalchemy = "^2.0.46"
psycopg = "^3.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
